fix: Swagger list users
