# docs/swagger.json
@@ -297,56 +297,6 @@
                 }
             }
         },
-        "/user/:id": {
-            "get": {
-                "description": "Retorna um usuário através do ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "Retorna um usuário",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "ID do usuário (UUID)",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/user.User"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/errors.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/errors.ErrorResponse"
-                        }
-                    },
-                    "502": {
-                        "description": "Bad Gateway",
-                        "schema": {
-                            "$ref": "#/definitions/errors.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/user/change-password": {
             "put": {
                 "description": "Atualiza a senha do usuário",
@@ -395,6 +345,56 @@
                     }
                 }
             }
+        },
+        "/user/{id}": {
+            "get": {
+                "description": "Retorna um usuário através do ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Retorna um usuário",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID do usuário (UUID)",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorResponse"
+                        }
+                    },
+                    "502": {
+                        "description": "Bad Gateway",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -412,12 +412,14 @@
             "enum": [
                 "Google",
                 "Apple",
-                "Meta"
+                "Meta",
+                "Local"
             ],
             "x-enum-varnames": [
                 "AccountProviderGoogle",
                 "AccountProviderApple",
-                "AccountProviderMeta"
+                "AccountProviderMeta",
+                "AccountProviderLocal"
             ]
         },
         "types.Role": {
@@ -440,7 +442,6 @@
         "user.CreateUserParams": {
             "type": "object",
             "required": [
-                "account_provider",
                 "email",
                 "password",
                 "role"
